argocd/chart/ingress/argo-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argo-cd
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - hosts:
    - argocd.lab.k8s.io
    port:
      name: http
      number: 80
      protocol: HTTP
